--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,10 +1,13 @@
 name: Chromatic
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   chromatic-deployment:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
